--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3>Spécial covid</h3>
                     <a href="/pages/femme/femme_categories.html">Je choisis mon masque !</a></div>
                 <div><img src="/images/service_relooking.jpg" alt="image_relooking">
-                    <h3>Coaching perso</h3>
+                    <h3>Coaching Prout</h3>
                     <a href="/pages/laboutique/reservation.html">Réservez votre date !</a></div>
             </div>
         </div>
