--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h3>Nouveauté</h3>
                     <a href="/pages/commande/moncompte.html">Je découvre !</a></div>
                 <div><img src="/images/collection_masque.jpg" alt="image_masques">
-                    <h3>Spécial covid</h3>
+                    <h3>Spécial Covid</h3>
                     <a href="/pages/femme/femme_categories.html">Je choisis mon masque !</a></div>
                 <div><img src="/images/service_relooking.jpg" alt="image_relooking">
                     <h3>Coaching perso</h3>
