20201130 plan de site actualites

--- a/footer.html
+++ b/footer.html
@@ -42,12 +42,12 @@
                 <h2><strong>SUIVEZ-NOUS</strong></h2>
                 <p class="centrer">Sur nos réseaux sociaux</p>
                 <p class="centrer">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                    <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-share-alt fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-print fa-2x"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a>
+                    <a href="#"><i class="fa fa-share-alt"></i></a>
+                    <a href="#"><i class="fa fa-print"></i></a>
 
 
                 </p>
