--- a/pages/laboutique/recrutement.html
+++ b/pages/laboutique/recrutement.html
@@ -8,18 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Overlock&family=Satisfy&display=swap" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="/javascript/jquery-ui-1.12.1/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="/javascript/jquery-ui-1.12.1/jquery-ui.min.css">
     <!-- Bootstrap library fonte-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script src="/javascript/jquery-ui-1.12.1/jquery-ui.min.js"></script>
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/javascript/datepickerfr.js"></script>
+    <script src="/javascript/datepicker.js"></script>
     <title>LPC - Recrutement</title>
     <meta name="description" content="Nous rejoindre - Recrutement - Le petit Commerce - Prêt à porter - Accessoires - Livraison gratuite - Paiement sécurisé - Projet IFOCOP">
 </head>
@@ -43,7 +46,7 @@
 
             <label class="label1" for="birthday">Date de naissance</label><br>
             <input class="input1" type="date" id="birthday" name="birthday" min="2017-04-01" max="1900-01-01" required /><br>
-
+            <div class="datepicker"></div>
             <label class="label1" for="email">Email*</label><br>
             <input class="input1" id="email" type="email" size="30" placeholder="Votre email" required><br>
             <fieldset>
