--- a/pages/commande/plandusite.html
+++ b/pages/commande/plandusite.html
@@ -29,8 +29,52 @@
     <header id="haut" class="header_dynamic sticky-top"></header>
 
     <!--Corps-->
-    <main class="container">
+    <main class="container plan_du_site">
+        <h1>Plan du site</h1>
+        <div class="green-divider"></div>
+        <article class="pds">
+            <ul>
+                <li class="pds_main">Commande
+                    <ul>
+                        <li><a href="/pages/commande/moncompte.html">Mon compte</a></li>
+                        <li><a href="/pages/commande/moncompte.html">Mes commandes</a></li>
+                        <li><a href="/pages/femme/femme_categories.html">Collection Femme</a>
+                            <ul>
+                                <li><a href="/pages/femme/femme_produits.html?#pap">Prêt-à-porter</a></li>
+                                <li><a href="/pages/femme/femme_produits.html?#accessoires">Accessoires</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/pages/homme/homme_categories.html">Collection Homme</a>
+                            <ul>
+                                <li><a href="/pages/homme/homme_categories.html">Toute la Collection</a></li>
+                                <li><a href="/pages/homme/homme_produits.html?#accessoires">Accessoires</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/pages/commande/plandusite.html">Plan du site</a></li>
+                    </ul>
+                </li>
+                <li class="pds_main">La boutique
+                    <ul>
+                        <li><a href="/pages/laboutique/reservation.html">Réservation</a></li>
+                        <li><a href="/pages/laboutique/pointdevente.html">Point de vente</a></li>
+                        <li><a href="/pages/laboutique/notrehistoire.html">Notre histoire</a></li>
+                        <li><a href="/pages/laboutique/contact.html">Contactez-nous</a></li>
+                        <li><a href="/pages/laboutique/recrutement.html">Nous rejoindre</a></li>
+                    </ul>
+                </li>
+                <li class="pds_main">Informations
+                    <ul>
+                        <li><a href="/pages/informations/actualite.html">Actualité</a></li>
+                        <li><a href="/pages/informations/avis.html">Avis</a></li>
+                        <li><a href="/pages/informations/faq.html">Foire aux questions</a></li>
+                        <li><a href="/pages/informations/cgv.html">CGV</a></li>
+                        <li><a href="/pages/informations/mentionslegales.html">Mentions légales</a></li>
+                    </ul>
+                </li>
 
+            </ul>
+
+        </article>
 
 
 
