--- a/header.html
+++ b/header.html
@@ -16,16 +16,20 @@
             <div class="logo">
                 <a href="/index.html">
                     <img src="/logo/logo.png" alt="LPC" />
+
                 </a>
             </div>
             <div class="menu_droit">
                 <div id="langue">
                     <ul>
-                        <li><a href="#">FR </a>|
-                            <a href="#">EN</a></li>
+                        <li>
+                            <select>
+                                <option type="texte" value="fr">Fr</option>
+                                <option type="texte" value="en">En</option>
+                            </select>
+                        </li>
                     </ul>
                 </div>
-
             </div>
 
         </div>
