--- a/pages/commande/panier.html
+++ b/pages/commande/panier.html
@@ -126,7 +126,7 @@
                 </tr>
             </table>
             <hr>CODE PROMO<br>
-            <input id="input_code_promo" type="text" value="Saissisez votre code">
+            <input id="input_code_promo" type="text" value="Saisissez votre code">
             <input id="btn_code_promo" type="submit" value="OK">
             <hr>
             <table class="tableau_panier">
@@ -140,8 +140,9 @@
                     <td class="right">199€88</td>
                 </tr>
             </table>
-            <input type="checkbox" name="cgv" id="cvg" required><label for="cvg"><em>J'accepte les conditions générales de vente*</em></label>
-            <input class="input-submit commander" type="submit" value="COMMANDER"><em>*Pour une livraison en magasin ou à partir de 30 €</em>
+            <input type="checkbox" name="cgv" id="cvg" required><label for="cvg"><em>J'accepte les <a href="/pages/informations/cgv.html">CVG</a><sup> (1)</sup></em></label>
+            <input class="input-submit commander" type="submit" value="COMMANDER"><em><sup>*</sup>À partir de 30€ ou en magasin</em><br/>
+            <em><sup>(1)</sup>Conditions générales de vente</em>
         </div>
 
 
