--- a/pages/femme/femme_produits.html
+++ b/pages/femme/femme_produits.html
@@ -64,6 +64,7 @@
 
         <div class="menu_droit">
             <h1>Femme</h1>
+            <div class="green-divider"></div>
             <article id="pap">
                 <h2>Prêt à porter</h2>
                 <div id="manteau_veste">
