--- a/pages/informations/actualite.html
+++ b/pages/informations/actualite.html
@@ -35,7 +35,7 @@
         <div class="green-divider"></div>
         <div class="row actualite_e">
             <div class="card">
-                <img src="/images/actualites/image_actu1.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu1.jpg" class="card-img-top" alt="Black Friday: aux États-Unis, les ventes en ligne atteignent des records">
                 <div class="card-body">
                     <h2 class="card-title">Black Friday: aux États-Unis, les ventes en ligne atteignent des records</h2>
                     <p class="card-text">Les consommateurs américains ont dépensé au moins 6,2 millions de dollars, par minute, en ligne vendredi dernier.</p>
@@ -44,7 +44,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu2.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu2.jpg" class="card-img-top" alt="La Cnil condamne Carrefour à une amende de 3 millions d’euros pour manquements au RGPD">
                 <div class="card-body">
                     <h2 class="card-title">La Cnil condamne Carrefour à une amende de 3 millions d’euros pour manquements au RGPD</h2>
                     <p class="card-text">Parmi les manquements aux obligations prévues par le RGPD, on peut citer un manque d’informations fournies aux utilisateurs lors de…</p>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu3.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu3.jpg" class="card-img-top" alt="Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage">
                 <div class="card-body">
                     <h2 class="card-title">Kingfisher rachète NeedHelp pour accélérer la digitalisation de ses services de bricolage</h2>
                     <p class="card-text">La plateforme française de mise en relation entre professionnels du bricolage et particuliers NeedHelp passe sous pavillon anglais.</p>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu4.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu4.jpg" class="card-img-top" alt="Walmart achète des actifs de JoyRun pour compléter son service de livraison">
                 <div class="card-body">
                     <h2 class="card-title">Walmart achète des actifs de JoyRun pour compléter son service de livraison</h2>
                     <p class="card-text">JoyRun développe une plateforme de livraison qui met en relation « les membres d'une communauté » et leur permet de récupérer les…</p>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu5.jpg" alt="...">
+                <img src="/images/actualites/image_actu5.jpg" class="card-img-top" alt="Amazon: en France, quelles alternatives face à la suprématie du géant américain">
                 <div class="card-body">
                     <h2 class="card-title">Amazon: en France, quelles alternatives face à la suprématie du géant américain</h2>
                     <p class="card-text">De loin premier e-commerçant en France, Amazon détient quelque 16,5% du marché français des biens physiques vendus en ligne.</p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu6.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu6.jpg" class="card-img-top" alt="E-commerce: Wish vise une valorisation entre 25 et 30 milliards de dollars pour son IPO à Wall Street">
                 <div class="card-body">
                     <h2 class="card-title">E-commerce: Wish vise une valorisation entre 25 et 30 milliards de dollars pour son IPO à Wall Street</h2>
                     <p class="card-text">Wish, qui se concentre sur les produits bon marché principalement fabriqués en Chine, a affirmé avoir plus de 100 millions…</p>
@@ -93,7 +93,7 @@
 
 
             <div class="card">
-                <img src="/images/actualites/image_actu7.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu7.jpg" class="card-img-top" alt="Amazon Pharmacy signe l’avancée inexorable du géant dans le secteur pharmaceutique">
                 <div class="card-body">
                     <h2 class="card-title">Amazon Pharmacy signe l’avancée inexorable du géant dans le secteur pharmaceutique</h2>
                     <p class="card-text">L’interêt d’Amazon pour le secteur n’est pas nouveau puisqu'il avait déjà fait une incursion dans l’industrie avec l’acquisition de la…</p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu8.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu8.jpg" class="card-img-top" alt="Pourquoi Walmart réduit la voilure au Japon">
                 <div class="card-body">
                     <h2 class="card-title">Pourquoi Walmart réduit la voilure au Japon</h2>
                     <p class="card-text">Walmart vend 85% de ses parts dans la chaîne de supermarchés japonaise Seiyu à KKR et Rakuten pour plus d’un…</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu9.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu9.jpg" class="card-img-top" alt="Retail: « Les marques prennent le virage des marketplaces »">
                 <div class="card-body">
                     <h2 class="card-title">[#NoMatterWhat] Retail: « Les marques prennent le virage des marketplaces »</h2>
                     <p class="card-text">Interview de Judith Lacroix, fondatrice de Ma Boutique Française, par Laurence Faguer.</p>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/actualites/image_actu10.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu10.jpg" class="card-img-top" alt="eCommerce : comment Alibaba prépare-t-il son Singles’ Day ?">
                 <div class="card-body">
                     <h2 class="card-title">eCommerce : comment Alibaba prépare-t-il son Singles’ Day ?</h2>
                     <p class="card-text">L'an passé, Alibaba avait enregistré 1 milliard de dollars de ventes en seulement 68 secondes.</p>
@@ -128,7 +128,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu11.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu11.jpg" class="card-img-top" alt="Comment le commerce de proximité se renouvelle avec le numérique ?">
                 <div class="card-body">
                     <h2 class="card-title">Comment le commerce de proximité se renouvelle avec le numérique ?</h2>
                     <p class="card-text">Jean-Luc Raymond de FranceNum.gouv.fr nous fait découvrir les meilleures initiatives des TPE et PME en matière de transformation numérique</p>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu12.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu12.jpg" class="card-img-top" alt="En attendant le Singles’ Day, Alibaba annonce une croissance vigoureuse de ses ventes">
                 <div class="card-body">
                     <h2 class="card-title">En attendant le Singles’ Day, Alibaba annonce une croissance vigoureuse de ses ventes</h2>
                     <p class="card-text">Cette communication intervient peu avant le festival du shopping du 11 novembre en Chine, le fameux "Singles' Day", popularisé par…</p>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/actualites/image_actu13.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu13.jpg" class="card-img-top" alt="Covid-19: face à l’urgence, comment convertir les commerces au numérique?">
                 <div class="card-body">
                     <h2 class="card-title">Covid-19: face à l’urgence, comment convertir les commerces au numérique?</h2>
                     <p class="card-text">Le gouvernement doit annoncer jeudi les premières "offres labellisées" dans le cadre d'un appel à projet qui doit recenser les…</p>
@@ -154,7 +154,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu14.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu14.jpg" class="card-img-top" alt="Pourquoi la personnalisation est un enjeu majeur d’une stratégie cross-canal">
                 <div class="card-body">
                     <h2 class="card-title">Pourquoi la personnalisation est un enjeu majeur d’une stratégie cross-canal</h2>
                     <p class="card-text">Comment développer une stratégie cross-canal tout en personnalisant le parcours de vos visiteurs?</p>
@@ -163,7 +163,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/actualites/image_actu15.jpg" class="card-img-top" alt="...">
+                <img src="/images/actualites/image_actu15.jpg" class="card-img-top" alt="Que pèse vraiment Amazon en France?">
                 <div class="card-body">
                     <h2 class="card-title">Que pèse vraiment Amazon en France?</h2>
                     <p class="card-text">Le géant américain est en train de devenir l'épouvantail numéro un des commerces fermés pour tenter d'endiguer l'épidémie de Covid-19.</p>
