--- a/pages/informations/faq.html
+++ b/pages/informations/faq.html
@@ -32,7 +32,7 @@
     <main class="faq">
         <h1>Foire aux questions</h1>
         <div class="green-divider"></div>
-        <div class="div_search_faq"><input id="input_search_faq" class="form-control" type="text" placeholder=" &#xF002;   Besoin d'aide ?  Ma question ..." aria-label="Search">
+        <div class="div_search_faq"><input id="input_search_faq" class="form-control" type="text" placeholder=" &#xF002;   Besoin d'aide ?  Indiquez votre question ..." aria-label="Search">
         </div>
 
 
