--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/image_boutique.webp" alt="First slide">
+                    <img class="d-block w-100" src="/images/image_boutique_test.jpg" alt="First slide">
                     <div class="carousel-caption d-xs-block">
                         <h1>Ouverture de notre boutique Parisienne</h1>
                         <a class="btn_link" href="/pages/laboutique/notrehistoire.html" role="button">Je découvre la boutique</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/people-2603521_1280.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="/images/people_test.jpg" alt="Second slide">
                     <div class="carousel-caption d-xs-block">
                         <h2>Découvrir nos collections</h2>
                         <a class="btn_link" href="/pages/femme/femme_categories.html" role="button">Collection Femme</a>
@@ -55,7 +55,7 @@
 
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/relooking_il.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="/images/relooking_il_test.jpg" alt="Third slide">
                     <div class="carousel-caption d-xs-block">
                         <h2>Venez vivre une expérience unique<br> Coaching Personnalisé</h2>
                         <a class="btn_link" href="/pages/laboutique/reservation.html" role="button">Je Réserve !</a>
@@ -71,6 +71,54 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <!-- Les plus populaires-->
+        <div class="populaire">
+            <h2>Les plus populaires</h2>
+            <div class="green-divider"></div>
+            <article class="populaire">
+
+                <div class="row">
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <div class="card my-3 border-grey shadow">
+                            <a class="stretched-link" href="/pages/femme/produits/manteau1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/manteau1/manteau1_main.jpg" alt="Manteau imitation fourrure"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Manteau imitation fourrure</h4>
+                                <span class="prix">99€99</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <div class="card my-3 border-grey shadow">
+                            <a class="stretched-link" href="/pages/femme/produits/manteau2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/manteau2/manteau2_main.jpg" alt="Duffle-coat mi-long"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Duffle-coat mi-long</h4>
+                                <span class="prix">89€99</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <div class="card my-3 border-grey shadow">
+                            <a class="stretched-link" href="/pages/femme/produits/veste1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste1/veste1_main.jpg" alt="Blouson court vert foncé"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Blouson court vert foncé</h4>
+                                <span class="prix">49€99</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <div class="card my-3 border-grey shadow">
+                            <a class="stretched-link" href="/pages/femme/produits/veste2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste2/veste2_main.jpg" alt="Trench mi-long"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Trench mi-long</h4>
+                                <span class="prix">59€99</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </article>
+        </div>
+
         <!-- Actus-->
         <div class="actus">
             <h2>Actus</h2>
@@ -94,71 +142,91 @@
             <div id="carousel_avis" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active avis_rows3" data-interval="5000">
-                        <div><span class="avis_texte">"Un grand merci pour vos conseils"</span><br>
+
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Un grand merci pour vos conseils"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
-                            <p class="avis_nom">Marine</p>
+                            <div>
+                                <p class="avis_nom">Marine</p>
+                            </div>
                         </div>
 
-                        <div><span class="avis_texte">"Ravi de mon achat, réceptionné dans les délais"</span><br>
+
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Ravi de mon achat, réceptionné dans les délais"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                             </div>
-                            <p class="avis_nom">Pierre</p>
+                            <div>
+                                <p class="avis_nom">Pierre</p>
+                            </div>
                         </div>
-                        <div><span class="avis_texte">"Journée inoubliable avec Eric, expert en relooking"</span><br>
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Journée inoubliable avec Eric, expert en relooking"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
-                            <p class="avis_nom">Julie</p>
+                            <div>
+                                <p class="avis_nom">Julie</p>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item avis_rows3">
-                        <div><span class="avis_texte">"Je recommande, bon service client"</span><br>
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Je recommande, bon service client"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
-                            <p class="avis_nom">Arnaud</p>
+                            <div>
+                                <p class="avis_nom">Arnaud</p>
+                            </div>
                         </div>
-                        <div><span class="avis_texte">"Bien conseillé, le cadeau a été apprécié"</span><br>
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Bien conseillé, le cadeau a été apprécié"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
-                            <p class="avis_nom">Romain</p>
+                            <div>
+                                <p class="avis_nom">Romain</p>
+                            </div>
                         </div>
-                        <div><span class="avis_texte">"Vendeurs agréables et souriants"</span><br>
+                        <div class="block_avis">
+                            <div><span class="avis_texte">"Vendeurs agréables et souriants"</span></div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
-                            <p class="avis_nom">Louise</p>
+                            <div>
+                                <p class="avis_nom">Louise</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel_avis" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-prev-icon grey" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carousel_avis" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon grey" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
