--- a/pages/femme/femme_categories.html
+++ b/pages/femme/femme_categories.html
@@ -62,6 +62,7 @@
         </aside>
         <div class="menu_droit">
             <h1>Femme</h1>
+            <div class="green-divider"></div>
             <article class="col_articles">
                 <h2>Prêt à porter</h2>
                 <div id="carousel_pap_femme" class="carousel slide" data-ride="carousel">
@@ -94,14 +95,13 @@
                                 <a href="/pages/femme/femme_produits.html"><img src="/images/image_pap_femme.jpg" alt="tout le prêt-à-porter"><span>Tout le prêt à porter</span></a>
                             </div>
                         </div>
-
                     </div>
                     <a class="carousel-control-prev" href="#carousel_pap_femme" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon grey" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carousel_pap_femme" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon grey" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
